TEST_PROGRAMS/VALID/08/comments.go
//line comment
package main;
/*
block comment
*/
//line comment
func main(){
    var x int /*
    */
}
//line comment
/*
block comment
*/
