TEST_PROGRAMS/INVALID/04/84.go
package main

func main() {
    var x = 2
    // Missing semicolon at end of inner block
    { x++ }
}
